--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=authentication-service
+
 server.port=8080
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-logging.level.edu.dosw.rideci=DEBUG
-### Conexion base de datos MongoDB (No relacional)
-spring.data.mongodb.uri=${DATABASE_URL:mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/?appName=RIDECIAUTH}
-spring.data.mongodb.database=${MONGO_DB_NAME:RIDECIAUTH}
+
+#spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/
+
+spring.data.mongodb.uri=${MONGO_URL}
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.port=${RABBIT_PORT}
+spring.rabbitmq.username=${RABBIT_USER}
+spring.rabbitmq.password=${RABBIT_PASSWORD}
+spring.rabbitmq.virtual-host=${RABBIT_VHOST}
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
