--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=authentication-service
 
-server.port=8080
+#server.port=8080
 
 #spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/
 
