--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=authentication-service
 
 #spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/
 
-spring.data.mongodb.uri=${MONGO_URL}
+spring.data.mongodb.uri=${MONGO_URI}
 spring.rabbitmq.host=${RABBIT_HOST}
 spring.rabbitmq.port=${RABBIT_PORT}
 spring.rabbitmq.username=${RABBIT_USER}
