--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=authentication-service
 
 #spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/
 
+
+#DOCUMENTAR PARA PROBARLO LOCALMENTE
 spring.data.mongodb.uri=${MONGO_URI}
 spring.rabbitmq.host=${RABBIT_HOST}
 spring.rabbitmq.port=${RABBIT_PORT}
