FEAT: Patrón saga

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=authentication-service
 
-#server.port=8080
+server.port=8080
 
-#spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/RIDECCIAUTH
+spring.data.mongodb.uri=mongodb+srv://davidpalaciosp_db_user:RIDECIDOSWGRUPO1@rideciauth.jopwgr4.mongodb.net/RIDECCIAUTH
 
 
 #DOCUMENTAR PARA PROBARLO LOCALMENTE
-spring.data.mongodb.uri=${MONGO_URI}
-spring.rabbitmq.host=${RABBIT_HOST}
-spring.rabbitmq.port=${RABBIT_PORT}
-spring.rabbitmq.username=${RABBIT_USER}
-spring.rabbitmq.password=${RABBIT_PASSWORD}
-spring.rabbitmq.virtual-host=${RABBIT_VHOST}
+#spring.data.mongodb.uri=${MONGO_URI}
+#spring.rabbitmq.host=${RABBIT_HOST}
+#spring.rabbitmq.port=${RABBIT_PORT}
+#spring.rabbitmq.username=${RABBIT_USER}
+#spring.rabbitmq.password=${RABBIT_PASSWORD}
+#spring.rabbitmq.virtual-host=${RABBIT_VHOST}
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
