--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: project build & test
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["main", "develop"]
   pull_request:
     branches: ["main", "develop"]
 
