--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=authentication-service
 
 #DOCUMENTAR PARA PROBARLO LOCALMENTE
 spring.data.mongodb.uri=${MONGO_URI}
-spring.rabbitmq.host=${RABBIT_HOST}#
+spring.rabbitmq.host=${RABBIT_HOST}
 spring.rabbitmq.port=${RABBIT_PORT}
 spring.rabbitmq.username=${RABBIT_USER}
 spring.rabbitmq.password=${RABBIT_PASSWORD}
