--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.rabbitmq.port=${RABBIT_PORT}
 spring.rabbitmq.username=${RABBIT_USER}
 spring.rabbitmq.password=${RABBIT_PASSWORD}
 spring.rabbitmq.virtual-host=${RABBIT_VHOST}
+spring.data.redis.host=${REDISHOST}
+spring.data.redis.port=${REDISPORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
